[package]
name = "cert-checker"
version = "0.1.0"
authors = ["wojtekw92 <wwozniak92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
opsgenie = "0.0.1"

[dependencies.ssl-expiration]
git = "https://github.com/wojtekw92/ssl-expiration.git"
branch = "add-hostname-support"
