[package]
name = "cert-checker"
version = "0.0.4"
authors = ["wojtekw92 <wwozniak92@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.20"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
chrono = "0.4.22"
opsgenie = "0.0.1"

[dependencies.ssl-expiration]
git = "https://github.com/wojtekw92/ssl-expiration.git"
branch = "add-hostname-support"
